# stm32f107-audio-dotmatrix-visualiser

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README.md  STM32F107VCTx_FLASH.ld  STM32F107xC.cmake  f107-fft.ioc  f107-fft.xml
Inc/: mxconstants.h  stm32f1xx_hal_conf.h  tim.h  user_main.h  utils.h
Max2719/: dotmatrix.c  malloc_safe.c
Src/: adc.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c  user_main.c  utils.c
User/: debounce.c  debounce.h  debug.h  dotmatrix.c  dotmatrix.h  fft_windows.c  fft_windows.h  font.h  malloc_safe.h  max2719.c  max2719.h  screendef.h  scrolltext.c  scrolltext.h  timebase.c  timebase.h  user_main.c
